--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           python-version: "3.12"
       - name: install dependencies
-        run: pip instal -r requirements.txt
+        run: pip install -r requirements.txt
       - name: Run tests
         run: pytest -v
         
